fix deprecated Integer-related method.