@@ -584,7 +584,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(int value) {
-    put(new Integer(value));
+    put(Integer.valueOf(value));
     return this;
   }
 
@@ -684,7 +684,7 @@ public class JSONArray {
    *           If the index is negative.
    */
   public JSONArray put(int index, int value) throws JSONException {
-    put(index, new Integer(value));
+    put(index, Integer.valueOf(value));
     return this;
   }
 
